--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ header {
     text-align: center;
 }
 
+header img {
+    border-radius: 50%;
+    margin-bottom: 1em;
+}
+
 section {
     padding: 2em;
     margin: 1em;
